package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//base:copts.bzl", "COPTS")

cc_library(
    name = "defs",
    hdrs = [
        "defs.h",
    ],
    copts = COPTS,
)

cc_library(
    name = "random",
    srcs = [
        "random.c",
    ],
    hdrs = [
        "random.h",
    ],
    copts = COPTS,
)

cc_library(
    name = "base",
    srcs = [
        "console.c",
        "console_global.c",
        "console_internal.h",
        "fatal.c",
        "float.c",
        "hash.c",
        "mat4.c",
        "memory.c",
        "quat.c",
        "vec2.c",
        "vec3.c",
    ] + select({
        "//n64:os": [
            "n64/console.c",
            "n64/fatal.c",
            "n64/mat4.c",
            "n64/memory.c",
            "n64/os.c",
            "n64/stack_boot.s",
            "n64/stack_idle.s",
            "n64/start.s",
            "n64/thread.c",
        ],
        "//conditions:default": [
            "fatal_pc.c",
        ],
    }),
    hdrs = [
        "base.h",
        "console.h",
        "float.h",
        "hash.h",
        "mat4.h",
        "memory.h",
        "quat.h",
        "vec2.h",
        "vec3.h",
        "vectypes.h",
    ] + select({
        "//n64:os": [
            "n64/console.h",
            "n64/mat4.h",
            "n64/os.h",
            "n64/system.h",
        ],
        "//conditions:default": [
            "system_pc.h",
        ],
    }),
    copts = COPTS,
    defines = ["F3DEX_GBI_2"],
    deps = [
        ":defs",
        "//assets/fonts/terminus:ter-u12n",
    ] + select({
        "//n64:os": ["//sdk:libultra"],
        "//conditions:default": [],
    }),
)

cc_library(
    name = "scheduler",
    srcs = [
        "n64/scheduler.c",
    ],
    hdrs = [
        "n64/scheduler.h",
    ],
    copts = COPTS,
    deps = [
        ":base",
    ],
)

cc_library(
    name = "tool",
    srcs = [
        "die.c",
        "pack32.c",
        "swap16.c",
        "swap16arr.c",
        "swap32.c",
        "xmalloc.c",
    ],
    hdrs = [
        "tool.h",
    ],
    copts = COPTS,
    deps = [":defs"],
)

cc_test(
    name = "console_test",
    size = "small",
    srcs = [
        "console_internal.h",
        "console_test.c",
    ],
    copts = COPTS,
    visibility = ["//visibility:private"],
    deps = [
        ":base",
        "//base/testlib",
    ],
)
