load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//base:copts.bzl", "CXXOPTS")

cc_library(
    name = "quote",
    srcs = ["quote.cpp"],
    hdrs = ["quote.hpp"],
    copts = CXXOPTS,
    visibility = ["//tools:__subpackages__"],
)

cc_library(
    name = "flag",
    srcs = [
        "flag.cpp",
    ],
    hdrs = [
        "flag.hpp",
    ],
    copts = CXXOPTS,
    visibility = ["//tools:__subpackages__"],
    deps = [
        ":quote",
    ],
)

cc_library(
    name = "hash",
    hdrs = [
        "hash.hpp",
    ],
    visibility = ["//tools:__subpackages__"],
)

cc_library(
    name = "bswap",
    hdrs = [
        "bswap.hpp",
    ],
    visibility = ["//tools:__subpackages__"],
)

cc_library(
    name = "expr",
    srcs = [
        "expr.cpp",
        "expr_flag.cpp",
    ],
    hdrs = [
        "expr.hpp",
        "expr_flag.hpp",
    ],
    copts = CXXOPTS,
    visibility = ["//tools:__subpackages__"],
    deps = [
        ":flag",
        "@fmt",
    ],
)

cc_binary(
    name = "expr_eval",
    srcs = [
        "expr_eval.cpp",
    ],
    copts = CXXOPTS,
    deps = [
        ":expr",
        "@fmt",
    ],
)
