load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:copts.bzl", "CXXOPTS")

cc_library(
    name = "util",
    srcs = [
        "error.cpp",
        "file.cpp",
        "flag.cpp",
        "log.cpp",
        "quote.cpp",
    ],
    hdrs = [
        "bswap.hpp",
        "error.hpp",
        "file.hpp",
        "flag.hpp",
        "hash.hpp",
        "log.hpp",
        "pack.hpp",
        "quote.hpp",
    ],
    copts = CXXOPTS,
    visibility = ["//tools:__subpackages__"],
    deps = [
        "@fmt",
    ],
)

cc_library(
    name = "expr",
    srcs = [
        "expr.cpp",
        "expr_flag.cpp",
    ],
    hdrs = [
        "expr.hpp",
        "expr_flag.hpp",
    ],
    copts = CXXOPTS,
    visibility = ["//tools:__subpackages__"],
    deps = [
        ":util",
        "@fmt",
    ],
)

cc_binary(
    name = "expr_eval",
    srcs = [
        "expr_eval.cpp",
    ],
    copts = CXXOPTS,
    deps = [
        ":expr",
        "@fmt",
    ],
)
