load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "rectpack",
    srcs = [
        "maxrects.go",
        "order.go",
        "rectpack.go",
    ],
    importpath = "thornmarked/tools/rectpack",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pack_test",
    size = "small",
    srcs = [
        "pack_test.go",
    ],
    embed = [":rectpack"],
)

go_binary(
    name = "demo",
    srcs = [
        "demo.go",
    ],
    deps = [":rectpack"],
)
