load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "vadpcm",
    srcs = [
        "binary.c",
        "binary.h",
        "codebook.c",
        "codebook.h",
        "decode.c",
        "error.c",
    ],
    hdrs = [
        "vadpcm.h",
    ],
    copts = COPTS,
    visibility = ["//tools:__subpackages__"],
)

cc_test(
    name = "encode_test",
    size = "small",
    srcs = [
        "encode.c",
        "vadpcm.h",
    ],
    copts = COPTS,
    defines = ["TEST"],
)

cc_test(
    name = "decode_test",
    size = "small",
    srcs = ["decode_test.c"],
    copts = COPTS,
    data = [
        "data/sfx1.adpcm.aifc",
        "data/sfx1.pcm.aiff",
    ],
    deps = [":vadpcm"],
)
