load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "binary",
    srcs = [
        "binary.c",
    ],
    hdrs = [
        "binary.h",
    ],
    copts = COPTS,
)

cc_library(
    name = "vadpcm",
    srcs = [
        "codebook.c",
        "codebook.h",
        "decode.c",
        "error.c",
    ],
    hdrs = [
        "vadpcm.h",
    ],
    copts = COPTS,
    visibility = ["//tools:__subpackages__"],
    deps = [
        ":binary",
    ],
)

cc_library(
    name = "test",
    testonly = True,
    srcs = [
        "test.c",
    ],
    hdrs = [
        "test.h",
    ],
    copts = COPTS,
    deps = [
        ":binary",
    ],
)

cc_test(
    name = "encode_test",
    size = "small",
    srcs = [
        "encode.c",
        "vadpcm.h",
    ],
    copts = COPTS,
    defines = ["TEST"],
    deps = [
        ":test",
    ],
)

cc_test(
    name = "decode_test",
    size = "small",
    srcs = ["decode_test.c"],
    copts = COPTS,
    data = [
        "data/sfx1.adpcm.aifc",
        "data/sfx1.pcm.aiff",
    ],
    deps = [
        ":test",
        ":vadpcm",
    ],
)
