load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "vadpcm",
    srcs = [
        "binary.c",
        "binary.h",
        "codebook.c",
        "decode.c",
        "error.c",
    ],
    hdrs = [
        "vadpcm.h",
    ],
    copts = COPTS,
    visibility = ["//tools:__subpackages__"],
)

cc_test(
    name = "vadpcm_test",
    size = "small",
    srcs = [
        "binary.c",
        "binary.h",
        "codebook.c",
        "decode.c",
        "encode.c",
        "error.c",
        "test.c",
        "test.h",
        "vadpcm.h",
    ],
    copts = COPTS,
    data = [
        "data/sfx1.adpcm.aifc",
        "data/sfx1.pcm.aiff",
    ],
    defines = ["TEST"],
)
