load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "audio",
    srcs = [
        "audioconvert.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/audio/aiff",
        "//lib/audio/metadata",
        "//lib/getpath",
        "@com_github_depp_extended//:go_default_library",
    ],
)
