load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//base:copts.bzl", "COPTS")

cc_binary(
    name = "raster",
    srcs = [
        "raster.c",
    ],
    copts = COPTS,
    deps = [
        "//base:tool",
        "@freetype",
    ],
)

go_binary(
    name = "font",
    srcs = [
        "font.go",
    ],
    data = [":raster"],
    deps = [
        "//tools/rectpack",
    ],
)
