load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "font",
    srcs = [
        "asset.go",
        "fallback.go",
        "font.go",
    ],
    data = ["//tools/font/raster"],
    visibility = ["//visibility:public"],
    deps = [
        "//tools/font/charset",
        "//tools/rectpack",
        "//tools/texture",
    ],
)
