load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "font",
    srcs = [
        "asset.go",
        "fallback.go",
        "font.go",
    ],
    data = ["//tools/font/raster"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/getpath",
        "//lib/rectpack",
        "//lib/texture",
        "//tools/font/charset",
        "@org_golang_x_text//encoding/charmap",
        "@org_golang_x_text//encoding/htmlindex",
    ],
)
