load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//base:copts.bzl", "CXXOPTS")

cc_binary(
    name = "modelconvert",
    srcs = [
        "axes.cpp",
        "axes.hpp",
        "compile.cpp",
        "compile.hpp",
        "config.hpp",
        "displaylist.cpp",
        "displaylist.hpp",
        "gbi.cpp",
        "gbi.hpp",
        "mesh.cpp",
        "mesh.hpp",
        "modelconvert.cpp",
        "vertex.hpp",
        "vertexcache.cpp",
        "vertexcache.hpp",
    ],
    copts = CXXOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//tools/util:bswap",
        "//tools/util:expr",
        "//tools/util:flag",
        "//tools/util:hash",
        "//tools/util:quote",
        "@assimp",
        "@fmt",
    ],
)
