load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "CXXOPTS")

cc_binary(
    name = "model",
    srcs = [
        "assimp.cpp",
        "axes.cpp",
        "axes.hpp",
        "compile.cpp",
        "compile.hpp",
        "config.hpp",
        "displaylist.cpp",
        "displaylist.hpp",
        "gbi.cpp",
        "gbi.hpp",
        "mesh.cpp",
        "mesh.hpp",
        "model.cpp",
        "model.hpp",
        "modelconvert.cpp",
        "vertex.hpp",
        "vertexcache.cpp",
        "vertexcache.hpp",
    ],
    copts = CXXOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//lib/cpp:bswap",
        "//lib/cpp:expr",
        "//lib/cpp:flag",
        "//lib/cpp:hash",
        "//lib/cpp:pack",
        "//lib/cpp:quote",
        "@assimp",
        "@fmt",
    ],
)
