load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "CXXOPTS")

cc_binary(
    name = "vadpcm",
    srcs = [
        "aiff.cpp",
        "aiff.hpp",
        "audiofile.cpp",
        "audiofile.hpp",
        "decode.cpp",
        "defs.hpp",
        "encode.cpp",
        "main.cpp",
    ],
    copts = CXXOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//lib/cpp:util",
        "//lib/vadpcm",
        "@fmt",
    ],
)
