load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "vadpcm",
    srcs = [
        "vadpcm.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/audio/aiff",
        "//lib/audio/vadpcm",
        "@com_github_depp_extended//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
