load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "aiff",
    srcs = [
        "aiff.go",
    ],
    importpath = "github.com/depp/skelly64/lib/audio/aiff",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_depp_extended//:go_default_library",
    ],
)
