load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//base:copts.bzl", "COPTS")

cc_binary(
    name = "raster",
    srcs = [
        "raster.c",
    ],
    copts = COPTS,
    # visibility = ["//tools/font:__pkg__"],
    visibility = ["//visibility:public"],
    deps = [
        "//base:tool",
        "@freetype",
    ],
)
